--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 #lista_productos {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
